--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "debug": "nodemon server.js -e js,hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
